# risk-assessment-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  buildandrunit.sh  buildit.sh  runit.sh  testit.sh
data/market/: headers.csv  market_scenario1.csv
data/portfolio/: headers.csv  portfolio_scenario1.csv
include/risk/: bs.hpp  eigen_stub.hpp  greeks.hpp  hvar.hpp  instrument.hpp  instrument_soa.hpp  kdb_connection.hpp  kdb_loader.hpp  market.hpp  mcvar.hpp  portfolio.hpp  universe.hpp  utils.hpp
scripts/: compute_shocks.q  load_data.q  metrics.q
src/: CMakeLists.txt  bs.cpp  greeks.cpp  hvar.cpp  instrument_soa.cpp  kdb_connection.cpp  kdb_loader.cpp  market.cpp  mcvar.cpp  portfolio.cpp  risk_assessment_engine.cpp  universe.cpp  utils.cpp
test/: CMakeLists.txt  test_bs.cpp  test_greeks.cpp  test_hvar.cpp  test_instrument_soa.cpp  test_mcvar.cpp  test_utils.cpp
